fix: Payroll formatting

--- a/docs/payroll/cp38.md
+++ b/docs/payroll/cp38.md
@@ -3,33 +3,31 @@ sidebar_position: 6
 id: cp38
 title: CP38
 description: A guide to process CP38
-slug: /cp38
+slug: /payroll/cp38
 tags: ["SQL Payroll", "CP38"]
 ---
 
-# CP38
 - CP38 is a **instruction** to Deduct Salary which **issued by LHDN**. This CP38 instruction requires that the employer **make additional deductions in monthly installments** from the salary of the taxpayer (other than a Monthly Tax Deduction) towards settlement of taxpayer’s income tax arrears.
 - The Salary Deduction Order (CP38) for tax payment in instalments aims to ease the burden **of the taxpayer** who should be paying the tax arrears in one lump sum under the Income Tax Act 1967.
 
-**<ins>HOW TO INSERT FEW MONTHS OF CP38 IN SQL PAYMENT</ins>**
+## Insert Few Months of CP38 in SQL Payroll
 
-First, <mark>Open Pending Payroll</mark> and choose <mark>CP38</mark>
+1. **Open Pending Payroll** and choose **CP38**
 
-![1](/img/payroll/cp38/1.png)
+    ![1](/img/payroll/cp38/1.png)
 
-Second, Press <mark>GENERATE</mark> on the top left of the window.
+2. Press **GENERATE** on the top left of the window.
 
-![2](/img/payroll/cp38/2.png)
+    ![2](/img/payroll/cp38/2.png)
 
+3. Key in the Amount you receive from LHDN Letter, for example this employee ( 00001- Lucious ) had to pay CP38 on **June ( RM450 )** and July **( RM550 )**. Press **GENERATE**.
 
-Key in the Amount you receive from LHDN Letter, for example this employee ( 00001- Lucious ) had to pay CP38 on **June ( RM450 )** and July **( RM550 )**. Press <mark>GENERATE</mark>.
+    ![3](/img/payroll/cp38/3.png)
 
-![3](/img/payroll/cp38/3.png)
+4. Press **SAVE**
 
-Press <mark>SAVE</mark>
+    ![4](/img/payroll/cp38/4.png)
 
-![4](/img/payroll/cp38/4.png)
+5. This **pending** task only needs to be completed **once**. It will impact **both the June and July month-end processes**. The following pictures below will illustrate the end result :
 
-This <mark>pending</mark> just need to <mark>DO ONCE</mark>. It will have <mark>affect on both June and July month end Process</mark>. The following Pictures below will show you the end result.
-
-![5](/img/payroll/cp38/5.png)
+    ![5](/img/payroll/cp38/5.png)
