fix: replace Payroll images and headings

--- a/docs/payroll/cp38.md
+++ b/docs/payroll/cp38.md
@@ -10,7 +10,7 @@ tags: ["SQL Payroll", "CP38"]
 - CP38 is a **instruction** to Deduct Salary which **issued by LHDN**. This CP38 instruction requires that the employer **make additional deductions in monthly installments** from the salary of the taxpayer (other than a Monthly Tax Deduction) towards settlement of taxpayer’s income tax arrears.
 - The Salary Deduction Order (CP38) for tax payment in instalments aims to ease the burden **of the taxpayer** who should be paying the tax arrears in one lump sum under the Income Tax Act 1967.
 
-## Insert Few Months of CP38 in SQL Payroll
+### Insert Few Months of CP38 in SQL Payroll
 
 1. **Open Pending Payroll** and choose **CP38**
 
